tests/agl/rejections/parse/partial_placeholder_expr_arg.agl
def f(x: int) -> int = x

let y = f(? + 1)
